force-app/main/default/objects/CyberSourceSettings__c/CyberSourceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CyberSource Settings</label>
</CustomObject>