force-app/main/default/objects/CyberSourceSettings__c/fields/Access_key__c.field-meta.xml
<CustomField>
    <fullName>Access_key__c</fullName>
    <label>Access key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>