force-app/main/default/objects/CyberSourceSettings__c/fields/BusinessCenter__c.field-meta.xml
<CustomField>
    <fullName>BusinessCenter__c</fullName>
    <label>Business Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>