force-app/main/default/objects/CyberSourceSettings__c/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <label>Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>