force-app/main/default/objects/CyberSourceSettings__c/fields/Secret_Key_2__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key_2__c</fullName>
    <label>Secret Key 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>